add public submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/sk2"]
 	path = themes/sk2
 	url = https://github.com/J-Siu/hugo-theme-sk2
+[submodule "public"]
+	path = public
+	url = https://github.com/rita-2020/rita-2020.github.io.git
+	branch = master
